--- a/Source/HolyBird/GUI/DashboardCustomer.xaml
+++ b/Source/HolyBird/GUI/DashboardCustomer.xaml
@@ -8,7 +8,7 @@
         mc:Ignorable="d"
          Icon="images/g17176-512.png"
                 ResizeMode="CanMinimize"
-        Title="HolyBird - Customer" Height="768" Width="1366"  WindowStartupLocation="CenterScreen">
+        Title="HolyBird - Khách hàng" Height="576" Width="992"  WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <Storyboard x:Key="OpenMenu">
             <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(FrameworkElement.Width)" Storyboard.TargetName="GridMenu">
