--- a/Source/HolyBird/GUI/Employee_CreateAccount.xaml
+++ b/Source/HolyBird/GUI/Employee_CreateAccount.xaml
@@ -4,11 +4,115 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:GUI"
+      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
-      d:DesignHeight="727" d:DesignWidth="1298"
+      d:DesignHeight="537" d:DesignWidth="926"
       Title="CreateAccount">
 
-    <Grid>
-        <TextBlock>Tạo tài khoản mới cho khách hàng</TextBlock>
+    <Grid HorizontalAlignment="Left" Width="926">
+        <DatePicker
+            materialDesign:HintAssist.Hint="Ngày bắt đầu"
+            Style="{StaticResource MaterialDesignFloatingHintDatePicker}"
+            FontSize="13"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top" Margin="517,10,0,0" Width="176"/>
+        <DatePicker
+            materialDesign:HintAssist.Hint="Ngày kết thúc"
+            Style="{StaticResource MaterialDesignFloatingHintDatePicker}"
+            FontSize="13"
+            VerticalAlignment="Top"
+            HorizontalAlignment="Left" Margin="725,10,0,0" Width="176"/>
+        <Button Background="#4CAF50" BorderBrush="#4CAF50" Margin="20,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Width="160" Height="38">Save</Button>
+
+        <StackPanel  Orientation="Horizontal" x:Name="leader" HorizontalAlignment="Left" VerticalAlignment="Top" Width="881" Margin="20,70,0,0">
+            <materialDesign:PackIcon Kind="Stars" Height="27" Width="27" Margin="0,10,10,0" FontSize="13" Foreground="#F57F17" />
+            <TextBox 
+                Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="500">
+                <materialDesign:HintAssist.Hint>
+                    <StackPanel
+                        Orientation="Horizontal"
+                        Margin="-2 0 0 0">
+                        <materialDesign:PackIcon Kind="ClipboardUser" />
+                        <TextBlock><Run Text=" Họ và tên"/></TextBlock>
+                    </StackPanel>
+                </materialDesign:HintAssist.Hint>
+            </TextBox>
+            <TextBox
+                Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="535" Margin="10,0,0,0">
+                <materialDesign:HintAssist.Hint>
+                    <StackPanel
+                        Orientation="Horizontal"
+                        Margin="-2 0 0 0">
+                        <materialDesign:PackIcon Kind="Payment" />
+                        <TextBlock><Run Text=" CMND"/></TextBlock>
+                    </StackPanel>
+                </materialDesign:HintAssist.Hint>
+            </TextBox>
+        </StackPanel>
+        <Button IsEnabled="False" Click="addMember" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="861,123,0,0" Width="40" Padding="0" ScrollViewer.CanContentScroll="True">
+            <materialDesign:PackIcon Kind="Add" />
+        </Button>
+        <ListView x:Name="listMember" Margin="20,160,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="355" Width="881">
+            <ListViewItem HorizontalAlignment="Left" VerticalAlignment="Top" Width="881">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top" Width="865">
+                    <TextBox 
+                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="536">
+                        <materialDesign:HintAssist.Hint>
+                            <StackPanel
+                              Orientation="Horizontal"
+                              Margin="-2 0 0 0">
+                                <materialDesign:PackIcon
+                                    Kind="ClipboardUser" />
+                                    <TextBlock>
+                                        <Run Text=" Họ và tên"/>
+                                    </TextBlock>
+                            </StackPanel>
+                        </materialDesign:HintAssist.Hint>
+                    </TextBox>
+                    <TextBox 
+                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="319" Margin="10,0,0,0">
+                        <materialDesign:HintAssist.Hint>
+                            <StackPanel
+                              Orientation="Horizontal"
+                              Margin="-2 0 0 0">
+                                <materialDesign:PackIcon
+                                    Kind="Payment" />
+                                <TextBlock><Run Text=" CMND"/></TextBlock>
+                            </StackPanel>
+                        </materialDesign:HintAssist.Hint>
+                    </TextBox>
+                </StackPanel>
+            </ListViewItem>
+            <ListViewItem HorizontalAlignment="Left" VerticalAlignment="Top" Width="881">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top" Width="865">
+                    <TextBox 
+                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="536">
+                        <materialDesign:HintAssist.Hint>
+                            <StackPanel
+                              Orientation="Horizontal"
+                              Margin="-2 0 0 0">
+                                <materialDesign:PackIcon
+                                    Kind="ClipboardUser" />
+                                <TextBlock>
+                                        <Run Text=" Họ và tên"/>
+                                </TextBlock>
+                            </StackPanel>
+                        </materialDesign:HintAssist.Hint>
+                    </TextBox>
+                    <TextBox
+                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="319" Margin="10,0,0,0">
+                        <materialDesign:HintAssist.Hint>
+                            <StackPanel
+                              Orientation="Horizontal"
+                              Margin="-2 0 0 0">
+                                <materialDesign:PackIcon
+                                    Kind="Payment" />
+                                <TextBlock><Run Text=" CMND"/></TextBlock>
+                            </StackPanel>
+                        </materialDesign:HintAssist.Hint>
+                    </TextBox>
+                </StackPanel>
+            </ListViewItem>
+        </ListView>
     </Grid>
 </Page>
