--- a/Source/HolyBird/GUI/LogIn.xaml
+++ b/Source/HolyBird/GUI/LogIn.xaml
@@ -13,10 +13,10 @@
         <Grid.Background>
             <ImageBrush ImageSource="images/Travel-background1-1400x800.jpg"/>
         </Grid.Background>
-        <TextBox Name="login_username__name" HorizontalAlignment="Left" Height="28" Margin="168,120,0,0" TextWrapping="Wrap" materialDesign:HintAssist.Hint="Username" VerticalAlignment="Top" Width="171" RenderTransformOrigin="-2.2,0.217" FontSize="14"/>
-        <PasswordBox Name="login_password__name" materialDesign:HintAssist.Hint="Password" HorizontalAlignment="Left"  Margin="168,152,0,0" VerticalAlignment="Top" Width="171" RenderTransformOrigin="1.27,1.085" FontSize="14"/>
-        <Button Click="login_submit__click" Content="Login" HorizontalAlignment="Left" Margin="168,193,0,0" VerticalAlignment="Top" Width="171"/>
-        <Label Content="Welcome to" HorizontalAlignment="Left" Margin="637,48,0,0" VerticalAlignment="Top" Width="109" HorizontalContentAlignment="Center" FontSize="16"/>
+        <TextBox Name="login_username__name" HorizontalAlignment="Left" Height="28" Margin="168,120,0,0" TextWrapping="Wrap" materialDesign:HintAssist.Hint="Tên đăng nhập" VerticalAlignment="Top" Width="171" RenderTransformOrigin="-2.2,0.217" FontSize="14"/>
+        <PasswordBox Name="login_password__name" materialDesign:HintAssist.Hint="Mật khẩu" HorizontalAlignment="Left"  Margin="168,152,0,0" VerticalAlignment="Top" Width="171" RenderTransformOrigin="1.27,1.085" FontSize="14"/>
+        <Button IsDefault="True" Click="login_submit__click" Content="Đăng nhập" HorizontalAlignment="Left" Margin="168,193,0,0" VerticalAlignment="Top" Width="171"/>
+        <Label Content="Chào mừng đến với" HorizontalAlignment="Left" Margin="596,47,0,0" VerticalAlignment="Top" Width="155" HorizontalContentAlignment="Center" FontSize="16"/>
         <Label Content="HolyBird" HorizontalAlignment="Left" Margin="629,64,0,0" VerticalAlignment="Top" FontWeight="Bold" FontFamily="Segoe Print" FontSize="24" Width="144"/>
     </Grid>
 </Window>
