--- a/Source/HolyBird/GUI/Employee_CreateAccount.xaml
+++ b/Source/HolyBird/GUI/Employee_CreateAccount.xaml
@@ -9,7 +9,7 @@
       d:DesignHeight="537" d:DesignWidth="926"
       Title="CreateAccount">
 
-    <Grid HorizontalAlignment="Left" Width="926">
+    <Grid HorizontalAlignment="Left" Width="926" Height="536">
         <DatePicker
             materialDesign:HintAssist.Hint="Ngày bắt đầu"
             Style="{StaticResource MaterialDesignFloatingHintDatePicker}"
@@ -22,7 +22,7 @@
             FontSize="13"
             VerticalAlignment="Top"
             HorizontalAlignment="Left" Margin="725,10,0,0" Width="176"/>
-        <Button Background="#4CAF50" BorderBrush="#4CAF50" Margin="20,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Width="160" Height="38">Save</Button>
+        <Button Click="saveInformation" Background="#007bff" BorderBrush="#007bff" Margin="20,13,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Width="160" Height="32">Lưu</Button>
 
         <StackPanel  Orientation="Horizontal" x:Name="leader" HorizontalAlignment="Left" VerticalAlignment="Top" Width="881" Margin="20,70,0,0">
             <materialDesign:PackIcon Kind="Stars" Height="27" Width="27" Margin="0,10,10,0" FontSize="13" Foreground="#F57F17" />
@@ -49,70 +49,45 @@
                 </materialDesign:HintAssist.Hint>
             </TextBox>
         </StackPanel>
-        <Button IsEnabled="False" Click="addMember" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="861,123,0,0" Width="40" Padding="0" ScrollViewer.CanContentScroll="True">
-            <materialDesign:PackIcon Kind="Add" />
+        <Button Click="addMember" HorizontalAlignment="Left" Background="#28a745" BorderBrush="#28a745" VerticalAlignment="Top" Margin="861,123,0,0" Width="40" Padding="0" ScrollViewer.CanContentScroll="True">
+            <materialDesign:PackIcon Kind="AccountMultiplePlus" />
         </Button>
-        <ListView x:Name="listMember" Margin="20,160,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="355" Width="881">
-            <ListViewItem HorizontalAlignment="Left" VerticalAlignment="Top" Width="881">
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top" Width="865">
-                    <TextBox 
-                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="536">
-                        <materialDesign:HintAssist.Hint>
-                            <StackPanel
+        <Button Click="removeMember" HorizontalAlignment="Left" VerticalAlignment="Top" Height="32" Width="32" Background="#dc3545" BorderBrush="#dc3545" Margin="824,123,0,0" Padding="0,0,0,0" >
+            <materialDesign:PackIcon Kind="AccountRemove" Foreground="#fff" />
+        </Button>
+        <ListView x:Name="listMember"  Margin="20,160,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="355" Width="881">
+            <ListView.ItemTemplate >
+                <DataTemplate DataType="MemberDTO">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top" Width="865">
+                        <TextBox  Text="{Binding HoTen}"
+                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="526">
+                            <materialDesign:HintAssist.Hint>
+                                <StackPanel
                               Orientation="Horizontal"
                               Margin="-2 0 0 0">
-                                <materialDesign:PackIcon
+                                    <materialDesign:PackIcon
                                     Kind="ClipboardUser" />
                                     <TextBlock>
                                         <Run Text=" Họ và tên"/>
                                     </TextBlock>
-                            </StackPanel>
-                        </materialDesign:HintAssist.Hint>
-                    </TextBox>
-                    <TextBox 
-                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="319" Margin="10,0,0,0">
-                        <materialDesign:HintAssist.Hint>
-                            <StackPanel
+                                </StackPanel>
+                            </materialDesign:HintAssist.Hint>
+                        </TextBox>
+                        <TextBox Text="{Binding CMND}"
+                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="329" Margin="10,0,0,0">
+                            <materialDesign:HintAssist.Hint>
+                                <StackPanel
                               Orientation="Horizontal"
                               Margin="-2 0 0 0">
-                                <materialDesign:PackIcon
+                                    <materialDesign:PackIcon
                                     Kind="Payment" />
-                                <TextBlock><Run Text=" CMND"/></TextBlock>
-                            </StackPanel>
-                        </materialDesign:HintAssist.Hint>
-                    </TextBox>
-                </StackPanel>
-            </ListViewItem>
-            <ListViewItem HorizontalAlignment="Left" VerticalAlignment="Top" Width="881">
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top" Width="865">
-                    <TextBox 
-                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="536">
-                        <materialDesign:HintAssist.Hint>
-                            <StackPanel
-                              Orientation="Horizontal"
-                              Margin="-2 0 0 0">
-                                <materialDesign:PackIcon
-                                    Kind="ClipboardUser" />
-                                <TextBlock>
-                                        <Run Text=" Họ và tên"/>
-                                </TextBlock>
-                            </StackPanel>
-                        </materialDesign:HintAssist.Hint>
-                    </TextBox>
-                    <TextBox
-                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="319" Margin="10,0,0,0">
-                        <materialDesign:HintAssist.Hint>
-                            <StackPanel
-                              Orientation="Horizontal"
-                              Margin="-2 0 0 0">
-                                <materialDesign:PackIcon
-                                    Kind="Payment" />
-                                <TextBlock><Run Text=" CMND"/></TextBlock>
-                            </StackPanel>
-                        </materialDesign:HintAssist.Hint>
-                    </TextBox>
-                </StackPanel>
-            </ListViewItem>
+                                    <TextBlock><Run Text=" CMND"/></TextBlock>
+                                </StackPanel>
+                            </materialDesign:HintAssist.Hint>
+                        </TextBox>
+                    </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
         </ListView>
     </Grid>
 </Page>
