--- a/Source/HolyBird/GUI/Customer_OrderRoom.xaml
+++ b/Source/HolyBird/GUI/Customer_OrderRoom.xaml
@@ -6,9 +6,52 @@
       xmlns:local="clr-namespace:GUI"
       mc:Ignorable="d" 
       d:DesignHeight="537" d:DesignWidth="926"
-      Title="OrderRoom">
+                  xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+      Title="OrderRoom" Loaded="Window_Loaded_RoomOrdered">
 
     <Grid>
-        <TextBlock>Đặt phòng</TextBlock>
+        <Button Click="orderRoom" Background="#28a745" BorderBrush="#28a745" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,20,25,0">Đặt phòng</Button>
+        <ListView ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" x:Name="listRoomOrdered"  Margin="20,183,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="326" Width="881">
+            <ListView.ItemTemplate >
+                <DataTemplate DataType="RoomDTO">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top" Width="865">
+                        <TextBox  Text="{Binding Id}"
+                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="126" FontSize="13">
+                            <materialDesign:HintAssist.Hint>
+                                <StackPanel
+                              Orientation="Horizontal"
+                              Margin="-2 0 0 0">
+                                    <materialDesign:PackIcon
+                                    Kind="ClipboardUser" />
+                                    <TextBlock>
+                                        <Run Text=" Mã phòng"/>
+                                    </TextBlock>
+                                </StackPanel>
+                            </materialDesign:HintAssist.Hint>
+                        </TextBox>
+                        <TextBox Text="{Binding HangPhong}"
+                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="129" Margin="10,0,0,0" FontSize="13">
+                            <materialDesign:HintAssist.Hint>
+                                <StackPanel
+                              Orientation="Horizontal"
+                              Margin="-2 0 0 0">
+                                    <materialDesign:PackIcon
+                                    Kind="Payment" />
+                                    <TextBlock><Run Text=" Hạng phòng"/></TextBlock>
+                                </StackPanel>
+                            </materialDesign:HintAssist.Hint>
+                        </TextBox>
+                    </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+        <ComboBox
+            Name="listMember"
+            materialDesign:HintAssist.Hint="Họ tên"
+            IsEditable="False"
+            DisplayMemberPath="HoTen"
+            Style="{StaticResource MaterialDesignFloatingHintComboBox}" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,138,117,0" Width="119">
+        </ComboBox>
+        <Button HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,146,25,0">Chọn</Button>
     </Grid>
 </Page>
