--- a/Source/HolyBird/GUI/Employee_CreateAccount.xaml
+++ b/Source/HolyBird/GUI/Employee_CreateAccount.xaml
@@ -24,10 +24,10 @@
             HorizontalAlignment="Left" Margin="725,10,0,0" Width="176"/>
         <Button Click="saveInformation" Background="#007bff" BorderBrush="#007bff" Margin="20,13,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Width="160" Height="32">Lưu</Button>
 
-        <StackPanel  Orientation="Horizontal" x:Name="leader" HorizontalAlignment="Left" VerticalAlignment="Top" Width="881" Margin="20,70,0,0">
+        <StackPanel  Orientation="Horizontal" x:Name="leader" HorizontalAlignment="Left" VerticalAlignment="Top" Width="881" Margin="21,79,0,0">
             <materialDesign:PackIcon Kind="Stars" Height="27" Width="27" Margin="0,10,10,0" FontSize="13" Foreground="#F57F17" />
             <TextBox 
-                Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="500">
+                Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="500" FontSize="13">
                 <materialDesign:HintAssist.Hint>
                     <StackPanel
                         Orientation="Horizontal"
@@ -38,7 +38,7 @@
                 </materialDesign:HintAssist.Hint>
             </TextBox>
             <TextBox
-                Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="535" Margin="10,0,0,0">
+                Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="334" Margin="10,0,0,0" FontSize="13">
                 <materialDesign:HintAssist.Hint>
                     <StackPanel
                         Orientation="Horizontal"
@@ -49,18 +49,18 @@
                 </materialDesign:HintAssist.Hint>
             </TextBox>
         </StackPanel>
-        <Button Click="addMember" HorizontalAlignment="Left" Background="#28a745" BorderBrush="#28a745" VerticalAlignment="Top" Margin="861,123,0,0" Width="40" Padding="0" ScrollViewer.CanContentScroll="True">
+        <Button Click="addMember" HorizontalAlignment="Left" Background="#28a745" BorderBrush="#28a745" VerticalAlignment="Top" Margin="861,146,0,0" Width="40" Padding="0" ScrollViewer.CanContentScroll="True">
             <materialDesign:PackIcon Kind="AccountMultiplePlus" />
         </Button>
-        <Button Click="removeMember" HorizontalAlignment="Left" VerticalAlignment="Top" Height="32" Width="32" Background="#dc3545" BorderBrush="#dc3545" Margin="824,123,0,0" Padding="0,0,0,0" >
+        <Button Click="removeMember" HorizontalAlignment="Left" VerticalAlignment="Top" Height="32" Width="32" Background="#dc3545" BorderBrush="#dc3545" Margin="824,146,0,0" Padding="0,0,0,0" >
             <materialDesign:PackIcon Kind="AccountRemove" Foreground="#fff" />
         </Button>
-        <ListView x:Name="listMember"  Margin="20,160,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="355" Width="881">
+        <ListView ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" x:Name="listMember"  Margin="20,183,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="326" Width="881">
             <ListView.ItemTemplate >
                 <DataTemplate DataType="MemberDTO">
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top" Width="865">
                         <TextBox  Text="{Binding HoTen}"
-                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="526">
+                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="526" FontSize="13">
                             <materialDesign:HintAssist.Hint>
                                 <StackPanel
                               Orientation="Horizontal"
@@ -74,7 +74,7 @@
                             </materialDesign:HintAssist.Hint>
                         </TextBox>
                         <TextBox Text="{Binding CMND}"
-                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="329" Margin="10,0,0,0">
+                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="329" Margin="10,0,0,0" FontSize="13">
                             <materialDesign:HintAssist.Hint>
                                 <StackPanel
                               Orientation="Horizontal"
