--- a/Source/HolyBird/GUI/Bill.xaml
+++ b/Source/HolyBird/GUI/Bill.xaml
@@ -7,8 +7,123 @@
         xmlns:local="clr-namespace:GUI"
         Icon="images/g17176-512.png"
         mc:Ignorable="d"
-       Title="HolyBird - Bill" Height="768" Width="1366"  WindowStartupLocation="CenterScreen">
-    <Grid>
-        
+        Loaded="Window_Loaded_Bill"
+       Title="HolyBird - Hóa đơn" Height="537" Width="926"  WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize">
+    <Grid Background="#f8f8f8">
+        <TextBlock FontSize="26" FontWeight="Bold" TextAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,15,0,0" Width="895">Hóa đơn thanh toán</TextBlock>
+        <TextBlock TextAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,50,0,0" FontSize="20" FontWeight="Bold" Width="895">HolyBird Resort</TextBlock>
+        <TextBox IsReadOnly="True"
+                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="160" FontSize="13" Margin="20,147,0,0">
+            <materialDesign:HintAssist.Hint>
+                <StackPanel
+                              Orientation="Horizontal"
+                              Margin="-2 0 0 0">
+                    <materialDesign:PackIcon
+                                    Kind="Barcode" />
+                    <TextBlock>
+                                        <Run Text=" Mã hóa đơn"/>
+                    </TextBlock>
+                </StackPanel>
+            </materialDesign:HintAssist.Hint>
+        </TextBox>
+        <TextBox IsReadOnly="True"
+            Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Right" VerticalAlignment="Top" Width="160" FontSize="13" Margin="0,147,245,0" RenderTransformOrigin="0.488,0.47">
+            <materialDesign:HintAssist.Hint>
+                <StackPanel
+                    Orientation="Horizontal"
+                    Margin="-2 0 0 0">
+                    <materialDesign:PackIcon
+                        Kind="Barcode" />
+                    <TextBlock><Run Text=" Mã đoàn"/></TextBlock>
+                </StackPanel>
+            </materialDesign:HintAssist.Hint>
+        </TextBox>
+        <TextBox IsReadOnly="True"
+            Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Right" VerticalAlignment="Top" Width="200" FontSize="13" Margin="0,147,25,0">
+            <materialDesign:HintAssist.Hint>
+                <StackPanel
+                    Orientation="Horizontal"
+                    Margin="-2 0 0 0">
+                    <materialDesign:PackIcon
+                        Kind="User" />
+                    <TextBlock><Run Text=" Đại diện"/></TextBlock>
+                </StackPanel>
+            </materialDesign:HintAssist.Hint>
+        </TextBox>
+        <ListView ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" x:Name="listBillChildren"  Margin="20,200,0,20" HorizontalAlignment="Left" Width="869">
+            <ListView.ItemTemplate >
+                <DataTemplate DataType="BillChildDTO">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top" Width="865">
+                        <TextBox  Text="{Binding Id_Phong}" IsReadOnly="True"
+                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="210" FontSize="13">
+                            <materialDesign:HintAssist.Hint>
+                                <StackPanel
+                              Orientation="Horizontal"
+                              Margin="-2 0 0 0">
+                                    <materialDesign:PackIcon
+                                    Kind="Barcode" />
+                                    <TextBlock>
+                                        <Run Text=" Mã phòng"/>
+                                    </TextBlock>
+                                </StackPanel>
+                            </materialDesign:HintAssist.Hint>
+                        </TextBox>
+                        <TextBox Text="{Binding DonGia}" IsReadOnly="True"
+                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="10,0,0,0" FontSize="13">
+                            <materialDesign:HintAssist.Hint>
+                                <StackPanel
+                              Orientation="Horizontal"
+                              Margin="-2 0 0 0">
+                                    <materialDesign:PackIcon
+                                    Kind="Coin" />
+                                    <TextBlock><Run Text=" Đơn giá"/></TextBlock>
+                                </StackPanel>
+                            </materialDesign:HintAssist.Hint>
+                        </TextBox>
+                        <TextBox  Text="{Binding ThoiGian}" IsReadOnly="True"
+                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,0,0,0" Width="200" FontSize="13">
+                            <materialDesign:HintAssist.Hint>
+                                <StackPanel
+                              Orientation="Horizontal"
+                              Margin="-2 0 0 0">
+                                    <materialDesign:PackIcon
+                                    Kind="Timelapse" />
+                                    <TextBlock>
+                                        <Run Text=" Thời gian"/>
+                                    </TextBlock>
+                                </StackPanel>
+                            </materialDesign:HintAssist.Hint>
+                        </TextBox>
+                        <TextBox  Text="{Binding ThanhTien}" IsReadOnly="True"
+                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,0,0,0" Width="215" FontSize="13">
+                            <materialDesign:HintAssist.Hint>
+                                <StackPanel
+                              Orientation="Horizontal"
+                              Margin="-2 0 0 0">
+                                    <materialDesign:PackIcon
+                                    Kind="Payment" />
+                                    <TextBlock>
+                                        <Run Text=" Thành tiền"/>
+                                    </TextBlock>
+                                </StackPanel>
+                            </materialDesign:HintAssist.Hint>
+                        </TextBox>
+                    </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+        <TextBox IsReadOnly="True"
+            Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Right" VerticalAlignment="Top" Width="160" FontSize="18" Margin="0,91,25,0" RenderTransformOrigin="0.488,0.47" FontWeight="Bold">
+            <materialDesign:HintAssist.Hint>
+                <StackPanel
+                    Orientation="Horizontal"
+                    Margin="-2 0 0 0">
+                    <materialDesign:PackIcon
+                        Kind="Barcode" Height="24" />
+                    <TextBlock><Run Text=" Tổng tiền"/></TextBlock>
+                </StackPanel>
+            </materialDesign:HintAssist.Hint>
+        </TextBox>
+        <Button Click="payBill" Panel.ZIndex="2" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,15,25,0">Thanh toán</Button>
     </Grid>
 </Window>
