--- a/Source/HolyBird/GUI/Employee_Payment.xaml
+++ b/Source/HolyBird/GUI/Employee_Payment.xaml
@@ -4,11 +4,84 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:GUI"
+       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
       d:DesignHeight="537" d:DesignWidth="926"
+      Loaded="Window_Loaded_Damages"
       Title="Payment">
 
     <Grid>
-        <TextBlock>Thanh toán</TextBlock>
+        <TextBlock TextAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="26" FontWeight="Bold" Width="926" Margin="0,20,0,0">Thống kê thiệt hại</TextBlock>
+        <TextBox  Text="{Binding MaDoan}"
+                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="186" FontSize="13" Margin="25,73,0,0">
+            <materialDesign:HintAssist.Hint>
+                <StackPanel
+                              Orientation="Horizontal"
+                              Margin="-2 0 0 0">
+                    <materialDesign:PackIcon
+                                    Kind="Barcode" />
+                    <TextBlock>
+                                        <Run Text=" Mã đoàn"/>
+                    </TextBlock>
+                </StackPanel>
+            </materialDesign:HintAssist.Hint>
+        </TextBox>
+        <Button Click="searchRoomReserved" Background="#ffc107" Foreground="#212529" BorderBrush="#ffc107" Margin="216,79,0,0" Padding="0" Width="32" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <materialDesign:PackIcon Kind="Search"></materialDesign:PackIcon>
+        </Button>
+        <Button Click="exportBill" Margin="0,79,25,0" HorizontalAlignment="Right" VerticalAlignment="Top">
+            <StackPanel Orientation="Horizontal">
+                <materialDesign:PackIcon Kind="TicketPercent" Padding="0" Margin="0,0.25,5,0" HorizontalAlignment="Center" Height="19"/>
+                <TextBlock>Xuất hóa đơn</TextBlock>
+            </StackPanel>
+        </Button>
+        <ListView ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" x:Name="listDamages"  Margin="20,131,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="378" Width="881">
+            <ListView.ItemTemplate >
+                <DataTemplate DataType="DamagesDTO">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top" Width="865">
+                        <TextBox  Text="{Binding Id_Phong}" IsReadOnly="True"
+                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="270" FontSize="13">
+                            <materialDesign:HintAssist.Hint>
+                                <StackPanel
+                              Orientation="Horizontal"
+                              Margin="-2 0 0 0">
+                                    <materialDesign:PackIcon
+                                    Kind="ClipboardUser" />
+                                    <TextBlock>
+                                        <Run Text=" Mã phòng"/>
+                                    </TextBlock>
+                                </StackPanel>
+                            </materialDesign:HintAssist.Hint>
+                        </TextBox>
+                        <TextBox Text="{Binding TaiSanThietHai}"
+                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="320" Margin="10,0,0,0" FontSize="13">
+                            <materialDesign:HintAssist.Hint>
+                                <StackPanel
+                              Orientation="Horizontal"
+                              Margin="-2 0 0 0">
+                                    <materialDesign:PackIcon
+                                    Kind="Payment" />
+                                    <TextBlock><Run Text=" Tài sản thiệt hại"/></TextBlock>
+                                </StackPanel>
+                            </materialDesign:HintAssist.Hint>
+                        </TextBox>
+                        <TextBox  Text="{Binding ChiPhiDenBu}"
+                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,0,0,0" Width="270" FontSize="13">
+                            <materialDesign:HintAssist.Hint>
+                                <StackPanel
+                              Orientation="Horizontal"
+                              Margin="-2 0 0 0">
+                                    <materialDesign:PackIcon
+                                    Kind="ClipboardUser" />
+                                    <TextBlock>
+                                        <Run Text=" Chi phí đền bù"/>
+                                    </TextBlock>
+                                </StackPanel>
+                            </materialDesign:HintAssist.Hint>
+                        </TextBox>
+                    </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </Grid>
 </Page>
