--- a/Source/HolyBird/GUI/Customer_Detail.xaml
+++ b/Source/HolyBird/GUI/Customer_Detail.xaml
@@ -10,7 +10,9 @@
       Title="Detail" Loaded="Window_Loaded_DetailTransaction">
 
     <Grid>
-        <ListView ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" x:Name="listRoomOrder"  Margin="15,20,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="490" Width="886">
+        <TextBlock TextAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="26" FontWeight="Bold" Width="926" Margin="0,20,0,0">Chi tiết</TextBlock>
+        <TextBlock Visibility="Collapsed" TextAlignment="Center" Name="noDetail"  HorizontalAlignment="Center" VerticalAlignment="Top" Margin="7,70,0,0" Width="158">Không có chi tiết để xem</TextBlock>
+        <ListView ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" x:Name="listRoomOrder"  Margin="15,70,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="440" Width="886">
             <ListView.ItemTemplate >
                 <DataTemplate DataType="DetailRoomReservedDTO">
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top" Width="870">
@@ -41,7 +43,7 @@
                             </materialDesign:HintAssist.Hint>
                         </TextBox>
                         <TextBox Text="{Binding CMND}" IsReadOnly="True"
-                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="80" Margin="10,0,0,0" FontSize="13">
+                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Margin="10,0,0,0" FontSize="13">
                             <materialDesign:HintAssist.Hint>
                                 <StackPanel
                               Orientation="Horizontal"
@@ -65,7 +67,7 @@
                             </materialDesign:HintAssist.Hint>
                         </TextBox>
                         <TextBox Text="{Binding NgayBatDau}" IsReadOnly="True"
-                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="90" Margin="10,0,0,0" FontSize="13">
+                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="110" Margin="10,0,0,0" FontSize="13">
                             <materialDesign:HintAssist.Hint>
                                 <StackPanel
                               Orientation="Horizontal"
@@ -77,7 +79,7 @@
                             </materialDesign:HintAssist.Hint>
                         </TextBox>
                         <TextBox Text="{Binding NgayKetThuc}" IsReadOnly="True"
-                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="90" Margin="10,0,0,0" FontSize="13">
+                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="110" Margin="10,0,0,0" FontSize="13">
                             <materialDesign:HintAssist.Hint>
                                 <StackPanel
                               Orientation="Horizontal"
@@ -89,7 +91,7 @@
                             </materialDesign:HintAssist.Hint>
                         </TextBox>
                         <TextBox Text="{Binding DonGia}" IsReadOnly="True"
-                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Margin="10,0,0,0" FontSize="13">
+                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="90" Margin="10,0,0,0" FontSize="13">
                             <materialDesign:HintAssist.Hint>
                                 <StackPanel
                               Orientation="Horizontal"
@@ -101,7 +103,7 @@
                             </materialDesign:HintAssist.Hint>
                         </TextBox>
                         <TextBox Text="{Binding ThanhTien}" IsReadOnly="True"
-                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Margin="10,0,0,0" FontSize="13">
+                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="90" Margin="10,0,0,0" FontSize="13">
                             <materialDesign:HintAssist.Hint>
                                 <StackPanel
                               Orientation="Horizontal"
